--- a/app/styles/modules/_m-foot.scss
+++ b/app/styles/modules/_m-foot.scss
@@ -14,8 +14,6 @@
 		padding-top: 0px;
 		padding-right: 10px;
 		padding-left: 10px;
-		width:50px;
-		height:50px;
 		background-size: contain;
 		background-repeat: no-repeat;
 		//media query for BEM Element 
