--- a/app/styles/modules/_m-header.scss
+++ b/app/styles/modules/_m-header.scss
@@ -1,4 +1,5 @@
 .header-container{
+	padding-top: 5px;
 	width:inherit;
 	height:inherit;
 }
@@ -25,12 +26,14 @@
 	text-align: center;
 	// reponsive layout for tablets and up
 	@media only screen and (min-width: 850px) { 
-		margin-top: 240px;		
+		margin-top: 220px;		
 	}
 }
 
 .naviList{
 	margin-top: -40px;
+	padding-left: 0px;
+    padding-right: 0px;
 	width: 100%;
 	//BEM element for .naviList
 	&__item{
@@ -53,5 +56,10 @@
 		margin-top: -50px;
 		padding-right: 100px;
 		text-align: right;
+	}
+	// for iphone 6 +
+	@media screen and (min-device-width : 375px) and (max-device-width : 667px) and (-webkit-device-pixel-ratio: 2){
+		margin-top: 300px;
+		background: red;
 	}
 }
